--- a/exhibitions/afrofutures.html
+++ b/exhibitions/afrofutures.html
@@ -38,6 +38,7 @@
         <link rel="stylesheet" href="minify.css"> 
     -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 
 </head>
@@ -113,31 +114,33 @@
     </div>
 
     <!-- End of Navbar-->
-    <div class="items-container">
 
-        <section class="exhibition-intro">
+ 
+        <div class="items-container">
 
-            <p class="exhibition-title"><a href="./exhibitions/afrofutures">afro futures.</a></p>
-            <p class="exhibition-venue">kungstgewerber museum,</p>
-            <p class="exhibition-location">berlin,germany.</p>
-        </section>
+            <section class="exhibition-intro">
 
-        <section class="agathering-intro">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/1.webp" alt="">
-        </section>
+                <p class="exhibition-title"><a href="./afrofutures">afro futures.</a></p>
+                <p class="exhibition-venue">kungstgewerber museum,</p>
+                <p class="exhibition-location">berlin,germany.</p>
+            </section>
 
-        <section class="child-images">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/2.webp" alt="">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/3.webp" alt="">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/4.webp" alt="">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/5.webp" alt="">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/6.webp" alt="">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/7.webp" alt="">
-            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/8.webp" alt="">
+            <section class="agathering-intro">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/1.webp" alt="">
+            </section>
 
-        </section>
+            <section class="child-images">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/2.webp" alt="">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/3.webp" alt="">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/4.webp" alt="">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/5.webp" alt="">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/6.webp" alt="">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/7.webp" alt="">
+                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/8.webp" alt="">
 
-    </div>
+            </section>
+
+        </div>
 
 
     <!-- Start of Footer -->
@@ -165,6 +168,8 @@
 
 
     <script src="../script.js" async defer></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
 
 </body>
 
