--- a/exhibitions/agathering.html
+++ b/exhibitions/agathering.html
@@ -116,12 +116,12 @@
 
     <!-- End of Navbar-->
 
-    <main class="exhibition-main-container">
+
     <div class="items-container">
 
         <section class="exhibition-intro">
 
-            <p class="exhibition-title"><a href="./exhibitions/agathering">a gathering</a></p>
+            <p class="exhibition-title"><a href="./agathering">a gathering</a></p>
             <p class="exhibition-venue">ikollo gallery,</p>
             <p class="exhibition-location">lagos, nigeria.</p>
         </section>
@@ -147,7 +147,7 @@
 
     </div>
 
-    </main>
+
 
 
     <!-- Start of Footer -->
@@ -174,7 +174,8 @@
 
 
     <script src="../script.js" async defer></script>
-    <script src="../gsap.js"></script>
+<script src="../scripts/exhibitions.js"></script>
+<script src="../scripts/gsap.js"></script>
 
 </body>
 
