--- a/exhibitions/nigeria-trending-lagos-fringe.html
+++ b/exhibitions/nigeria-trending-lagos-fringe.html
@@ -38,6 +38,7 @@
         <link rel="stylesheet" href="minify.css"> 
     -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mobile.css">
 
 
 </head>
@@ -113,13 +114,13 @@
 
     <!-- End of Navbar-->
 
-        <main class="exhibition-main-container">
+      
 
     <div class="items-container">
 
         <section class="exhibition-intro">
 
-            <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">
+            <p class="exhibition-title"> <a href="./nigeria-trending-lagos-fringe">
                     nigeria trending, <br> lagos fringe</a>
             </p>
             <p class="exhibition-venue">freedom park, <br> kongi`s harvest gallery,</p>
@@ -144,7 +145,7 @@
 
     </div>
 
-    </main>
+
 
     <!-- Start of Footer -->
 
@@ -170,7 +171,8 @@
 
 
     <script src="../script.js" async defer></script>
-    <script src="../gsap.js"></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
 
 </body>
 
