--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -116,7 +116,7 @@
 
         <section class="exhibition-intro">
 
-            <p class="exhibition-title"><a href="./exhibitions/yanga">yanga.</a></p>
+            <p class="exhibition-title"><a href="./yanga">yanga.</a></p>
             <p class="exhibition-venue">african artists foundation,</p>
             <p class="exhibition-location">lagos, nigeria.</p>
         </section>
