--- a/projects/howtophotographylagos.html
+++ b/projects/howtophotographylagos.html
@@ -122,126 +122,129 @@
 
 
 
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title">how to photograph lagos.</h1>
+        <div class="boy-fraternity-div">
+            <h1 class="boy-fraternity-title">how to photograph lagos.</h1>
 
-        <p class="thelastburial-paragraph"> lagos is a city where slow and steady wins the race... philosophy is not
-            tolerated. it’s a city where
-            calmness is
-            misinterpreted as sluggishness and weakness. but you cannot blame the people, because in a city (whose
-            population is
-            above twenty million) most of whom have left their known world in the village for the ‘lagos dream’,
-            exhibiting the
-            innate desire of the communal is trivial, considered a waste of time, or as the people would say, ‘there is
-            no time to
-            check time.'
+            <p class="thelastburial-paragraph"> lagos is a city where slow and steady wins the race... philosophy is not
+                tolerated. it’s a city where
+                calmness is
+                misinterpreted as sluggishness and weakness. but you cannot blame the people, because in a city (whose
+                population is
+                above twenty million) most of whom have left their known world in the village for the ‘lagos dream’,
+                exhibiting the
+                innate desire of the communal is trivial, considered a waste of time, or as the people would say, ‘there
+                is
+                no time to
+                check time.'
 
-        </p>
-        <p class="thelastburial-paragraph">kokowa is a wrestling sport popular in northern nigeria. agile men wrestle
-            while gathered spectators cheer
-            their
-            champions. in 2018, i encountered this sport under obalende bridge. the sport has traveled from the far
-            north to lagos,
-            and the lagos audience is spectacular as they stood still to enjoy a game that they've missed (abandoned in
-            the village)
-            for the lagos dream.
-        </p>
+            </p>
+            <p class="thelastburial-paragraph">kokowa is a wrestling sport popular in northern nigeria. agile men
+                wrestle
+                while gathered spectators cheer
+                their
+                champions. in 2018, i encountered this sport under obalende bridge. the sport has traveled from the far
+                north to lagos,
+                and the lagos audience is spectacular as they stood still to enjoy a game that they've missed (abandoned
+                in
+                the village)
+                for the lagos dream.
+            </p>
 
-        <p class="thelastburial-paragraph">continue reading on
-            <a class="linktocontinuation" href="howtophotographylagostwo">how-to-photography-lagos-two </a>
-        </p>
-
-
-    </div>
-
-    <div class="main-exhibition">
-
-        <div class="carousel">
-
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
-            </button>
-
-            <div class="carousel-track-container">
-
-                <ul class="carousel-track">
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 3.webp"
-                            alt="howtophotographylagos" loading=""></li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 4.webp"
-                            alt="howtophotographylagos" loading=""></li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 6.webp"
-                            alt="howtophotographylagos" loading=""></li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 11.webp"
-                            alt="howtophotographylagos" loading=""></li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 14.webp"
-                            alt="howtophotographylagos" loading=""></li>
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 16.webp"
-                            alt="howtophotographylagos" loading=""></li>
+            <p class="thelastburial-paragraph">continue reading on
+                <a class="linktocontinuation" href="howtophotographylagostwo">how-to-photography-lagos-two </a>
+            </p>
 
 
+        </div>
+
+        <div class="main-exhibition">
+
+            <div class="carousel">
+
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="arrow-back-circle">
+                </button>
+
+                <div class="carousel-track-container">
+
+                    <ul class="carousel-track">
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 3.webp"
+                                alt="howtophotographylagos" loading=""></li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 4.webp"
+                                alt="howtophotographylagos" loading=""></li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 6.webp"
+                                alt="howtophotographylagos" loading=""></li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 11.webp"
+                                alt="howtophotographylagos" loading=""></li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 14.webp"
+                                alt="howtophotographylagos" loading=""></li>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/howtophotographylagos/1200px Jpeg/neec.nonso - 16.webp"
+                                alt="howtophotographylagos" loading=""></li>
 
 
 
 
-                </ul>
 
-            </div>
 
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
-            </button>
+                    </ul>
 
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
+                </div>
+
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="arrow-forward-circle">
+                </button>
+
+                <div class="carousel-nav">
+                    <button class="carousel-indicator current-slide"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+
+                </div>
 
             </div>
 
         </div>
 
-    </div>
+        <div class="mobile">
 
-    <div class="mobile">
-
-        <li class="carousel-image">
-            <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 3.webp"
-                alt="howtophotographylagos" loading="">
-        </li>
-        <li class="carousel-image">
-            <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
-                alt="howtophotographylagos" loading="">
-        </li>
-        <li class="carousel-image">
-            <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 6.webp"
-                alt="howtophotographylagos" loading="">
-        </li>
-        <li class="carousel-image">
-            <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 11.webp"
-                alt="howtophotographylagos" loading="">
-        </li>
-        <li class="carousel-image">
-            <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 14.webp"
-                alt="howtophotographylagos" loading="">
-        </li>
-        <li class="carousel-image">
-            <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
-                alt="howtophotographylagos" loading="">
-        </li>
+            <li class="carousel-image">
+                <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 3.webp"
+                    alt="howtophotographylagos" loading="">
+            </li>
+            <li class="carousel-image">
+                <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 4.webp"
+                    alt="howtophotographylagos" loading="">
+            </li>
+            <li class="carousel-image">
+                <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 6.webp"
+                    alt="howtophotographylagos" loading="">
+            </li>
+            <li class="carousel-image">
+                <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 11.webp"
+                    alt="howtophotographylagos" loading="">
+            </li>
+            <li class="carousel-image">
+                <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 14.webp"
+                    alt="howtophotographylagos" loading="">
+            </li>
+            <li class="carousel-image">
+                <img class="carousel-image" src="../images/howtophotographylagos/350px Mobile/neec.nonso - 16.webp"
+                    alt="howtophotographylagos" loading="">
+            </li>
 
 
-    </div>
+        </div>
 
-        </main>
+    </main>
 
     <!-- End of Main -->
     <!-- Start of Footer -->
@@ -265,70 +268,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
 
-        gsap.from(".extra", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.8,
-            duration: 1
-        });
-
-        gsap.from(".footer-container", {
-            scrollTrigger: {
-                trigger: ".carousel",
-                start: 510, // when the top of the trigger hits the top of the viewport
-                end: "+=600", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.5,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-
-        gsap.from(".thelastburial-paragraph", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.9,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-
-
-                //   markers: true,
-
-            }
-        });
-        tl.from(".boy-fraternity-title", { x: -200, opacity: 0, duration: 1 })
-        tl.from(".thelastburial-paragraph", { x: 200, opacity: 0, duration: 1.5 })
-        tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-        tl.from(".carousel", { y: 200, opacity: 0, duration: 1.5 })
-            .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-        //    .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
-
-
-
-
-    </script>
 
     <script src="../script.js" async defer></script>
     <script src="../projects.js" async defer></script>
