--- a/projects/thelastburial.html
+++ b/projects/thelastburial.html
@@ -6,31 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>the last burial | neec nonso |visual artist</title>
-<!-- Favicon -->
-<link rel="shortcut icon" type="image/png" href="../images/favicon.png">
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
 
-<meta name="robots" content="index, follow">
-<meta name="description" content="neec nonso is a nigerian visual artist">
-<meta name="keywords"
-    content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
-
-
-<!-- Open Graph Meta Tags -->
-
-<meta property="og:type" content="article" />
-<meta property="og:title" content="homepage | neec nonso | visual artist">
-<meta property="og:description" content="neec nonso is a nigerian visual artist">
-<meta property="og:url" content="http://neecnonso.com" />
-<meta property="og:image" content="../images/ogimage.png" />
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="neec nonso is a nigerian visual artist">
+    <meta name="keywords"
+        content="photographer, documentaryphotographer, visualartist, lagos, nigeria, northisnotnot, streetphotography, ekoforsale, neec, neecnonso, photography, abuja, documentary">
 
 
-<!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+    <!-- Open Graph Meta Tags -->
 
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@neecnonso" />
-<meta name="twitter:title" content="neec nonso | visual artist">
-<meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
-<meta name="twitter:image" content="../images/ogimage.png" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="homepage | neec nonso | visual artist">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist">
+    <meta property="og:url" content="http://neecnonso.com" />
+    <meta property="og:image" content="../images/ogimage.png" />
+
+
+    <!-- Facebook, whatsapp, instagram, twitter and other popular social media -->
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@neecnonso" />
+    <meta name="twitter:title" content="neec nonso | visual artist">
+    <meta property="og:description" content="neec nonso is a nigerian visual artist based in lagos,nigeria">
+    <meta name="twitter:image" content="../images/ogimage.png" />
     <!-- Style Links 
 
     <link rel="stylesheet" href="minify.css"> 
@@ -41,6 +41,7 @@
 </head>
 
 <body>
+    
     <!-- Back to top button -->
     <button onclick="topFunction()" id="myBtn" title="Back to Top">Top</button>
 
@@ -113,74 +114,85 @@
 
     <!-- Main -->
 
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title">the last burial.</h1>
+    <main>
+
+        <div class="boy-fraternity-div">
+            <h1 class="boy-fraternity-title">the last burial.</h1>
 
 
-        <p class="thelastburial-paragraph">
-            in july 2011, i mourned my mother. she was buried beside our home without a headstone, beneath a guava tree.
-            i was
-            unable to shed a tear during her burial, but every now and then, i encounter moments that trigger me into
-            tears.
+            <p class="thelastburial-paragraph">
+                in july 2011, i mourned my mother. she was buried beside our home without a headstone, beneath a guava
+                tree.
+                i was
+                unable to shed a tear during her burial, but every now and then, i encounter moments that trigger me
+                into
+                tears.
 
-            ten years later, i visited ikogosi town and noticed that the residents buried their deceased within their
-            homes.
-        </p>
+                ten years later, i visited ikogosi town and noticed that the residents buried their deceased within
+                their
+                homes.
+            </p>
 
-        <p class="thelastburial-paragraph">
-            strangely, this project coincides with my mother's burial month, and through this project, i re-enact her
-            burial
-            ceremony to honour her memory, using my body and installation pieces to explore the nuances i exhumed during
-            my visit to
-            ikogosi.
-        </p>
+            <p class="thelastburial-paragraph">
+                strangely, this project coincides with my mother's burial month, and through this project, i re-enact
+                her
+                burial
+                ceremony to honour her memory, using my body and installation pieces to explore the nuances i exhumed
+                during
+                my visit to
+                ikogosi.
+            </p>
 
 
-    </div>
+        </div>
 
-    <div class="main-exhibition">
+        <div class="main-exhibition">
 
-        <div class="carousel">
+            <div class="carousel">
 
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="">
-            </button>
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="">
+                </button>
 
-            <div class="carousel-track-container">
+                <div class="carousel-track-container">
 
-                <ul class="carousel-track">
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/the last burial/tinified/1.webp" alt=" thelastburial" loading="lazy"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the last burial/tinified/2.webp" alt=" thelastburial" loading="lazy"></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/the last burial/tinified/3.webp" alt="thelastburial" loading="lazy"></li>
-                </ul>
+                    <ul class="carousel-track">
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/the last burial/tinified/1.webp" alt=" thelastburial" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the last burial/tinified/2.webp" alt=" thelastburial" loading="lazy">
+                        </li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/the last burial/tinified/3.webp" alt="thelastburial" loading="lazy"></li>
+                    </ul>
 
-            </div>
+                </div>
 
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="">
-            </button>
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="">
+                </button>
 
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
+                <div class="carousel-nav">
+                    <button class="carousel-indicator current-slide"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+
+                </div>
 
             </div>
 
         </div>
 
-    </div>
+        <div class="mobile">
 
-    <div class="mobile">
+            <img class="carousel-image" src="../images/the last burial/Mobile/1.webp" alt="thelastburial mobile">
+            <img class="carousel-image" src="../images/the last burial/Mobile/2.webp" alt="thelastburial mobile">
+            <img class="carousel-image" src="../images/the last burial/Mobile/3.webp" alt="thelastburial mobile">
 
-        <img class="carousel-image" src="../images/the last burial/Mobile/1.webp" alt="thelastburial mobile">
-        <img class="carousel-image" src="../images/the last burial/Mobile/2.webp" alt="thelastburial mobile">
-        <img class="carousel-image" src="../images/the last burial/Mobile/3.webp" alt="thelastburial mobile">
+        </div>
 
-    </div>
+    </main>
 
     <!-- End of Main -->
 
@@ -205,67 +217,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
 
-        gsap.from(".extra", {
-            scrollTrigger: {
-                trigger: ".exhibitions-info",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.8,
-            duration: 1
-        });
-
-
-        gsap.from(".thelastburial-paragraph", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.9,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        gsap.from(".footer-container", {
-            scrollTrigger: {
-                trigger: ".carousel",
-                start: 400, // when the top of the trigger hits the top of the viewport
-                end: "+=400", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.5,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-
-
-                //   markers: true,
-
-            }
-        });
-        tl.from(".boy-fraternity-title", { x: -200, opacity: 0, duration: 1 })
-        tl.from(".thelastburial-paragraph", { x: 200, opacity: 0, duration: 1.5 })
-        tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-        tl.from(".carousel", { y: 200, opacity: 0, duration: 1.5 })
-            .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-            .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
-
-    </script>
     <script src="../projects.js" async defer></script>
     <script src="../script.js" async defer></script>
     <!-- <script src="countdown.js" async defer></script> -->
