--- a/projects/whatwasdeadwasneverdead.html
+++ b/projects/whatwasdeadwasneverdead.html
@@ -117,106 +117,115 @@
 
     <!-- Main -->
 
-
-    <div class="boy-fraternity-div">
-        <h1 class="boy-fraternity-title">what was dead was never dead</h1>
+    <main>
 
 
-        <p class="thelastburial-paragraph">
-            what was dead was never dead is an ongoing project that examines the universal belief in reincarnation and
-            posthumous
-            existence of dead relatives. in nigeria, people believe that human effort and achievement do not end with
-            death on the
-            earthly plane. this cosmological belief is articulated in a lot of different origin stories, many of which
-            are built
-            around individuals and archetypes in ghostland.
-        </p>
-
-        <p class="thelastburial-paragraph">
-            the world is an endless loop of the living and dead; coming and going. for instance, among the yoruba
-            people, the
-            universe is conceived as a three-storied structure: heavenworld above, earthworld and, the under-earthworld
-            below it.
-            the heavenworld above is the home of the father god, earthworld is the home of humankind [including
-            animalkind, trees
-            etc.], and the under-earthworld is the abode of the ancestors. when a child is born, the child is never
-            named, until the
-            gods are consulted, to reveal whom amongst the ancestors have come to live again on earthworld. hence, those
-            who are
-            dead, are never dead.
-        </p>
-        <p class="thelastburial-paragraph last">
-            in this body of work, i try to capture the living-dead, by examining intimate family stories―to exhume
-            memories, popular
-            myths and taboos surrounding death, reincarnation and the universal belief in the afterlife.
-
-        </p>
+        <div class="boy-fraternity-div">
+            <h1 class="boy-fraternity-title what">what was dead was never dead</h1>
 
 
-    </div>
+            <p class="thelastburial-paragraph">
+                what was dead was never dead is an ongoing project that examines the universal belief in reincarnation
+                and
+                posthumous
+                existence of dead relatives. in nigeria, people believe that human effort and achievement do not end
+                with
+                death on the
+                earthly plane. this cosmological belief is articulated in a lot of different origin stories, many of
+                which
+                are built
+                around individuals and archetypes in ghostland.
+            </p>
 
-    <div class="main-exhibition">
+            <p class="thelastburial-paragraph">
+                the world is an endless loop of the living and dead; coming and going. for instance, among the yoruba
+                people, the
+                universe is conceived as a three-storied structure: heavenworld above, earthworld and, the
+                under-earthworld
+                below it.
+                the heavenworld above is the home of the father god, earthworld is the home of humankind [including
+                animalkind, trees
+                etc.], and the under-earthworld is the abode of the ancestors. when a child is born, the child is never
+                named, until the
+                gods are consulted, to reveal whom amongst the ancestors have come to live again on earthworld. hence,
+                those
+                who are
+                dead, are never dead.
+            </p>
+            <p class="thelastburial-paragraph last">
+                in this body of work, i try to capture the living-dead, by examining intimate family stories―to exhume
+                memories, popular
+                myths and taboos surrounding death, reincarnation and the universal belief in the afterlife.
 
-        <div class="carousel">
+            </p>
 
-            <button class="carousel-button carousel--button-left is-hidden">
-                <img src="../images/arrow-back-circle.svg" alt="">
-            </button>
 
-            <div class="carousel-track-container">
+        </div>
 
-                <ul class="carousel-track">
+        <div class="main-exhibition">
 
-                    <li class="carousel-slide current-slide"><img class="carousel-image"
-                            src="../images/what was dead was never dead/tinified/neec.nonso--1.webp" alt=" Temple Image"
-                            loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/what was dead was never dead/tinified/neec.nonso--2.webp" alt=" Temple Image"
-                            loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/what was dead was never dead/tinified/neec.nonso--3.webp" alt=" Temple Image"
-                            loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/what was dead was never dead/tinified/neec.nonso--4.webp" alt=" Temple Image"
-                            loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/what was dead was never dead/tinified/neec.nonso--5.webp" alt=" Temple Image"
-                            loading=""></li>
-                    <li class="carousel-slide"><img class="carousel-image"
-                            src="../images/what was dead was never dead/tinified/neec.nonso--6.webp" alt=" Temple Image"
-                            loading=""></li>
+            <div class="carousel">
 
-                </ul>
+                <button class="carousel-button carousel--button-left is-hidden">
+                    <img src="../images/arrow-back-circle.svg" alt="">
+                </button>
 
-            </div>
+                <div class="carousel-track-container">
 
-            <button class="carousel-button carousel--button-right">
-                <img src="../images/arrow-forward-circle.svg" alt="">
-            </button>
+                    <ul class="carousel-track">
 
-            <div class="carousel-nav">
-                <button class="carousel-indicator current-slide"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
-                <button class="carousel-indicator"></button>
+                        <li class="carousel-slide current-slide"><img class="carousel-image"
+                                src="../images/what was dead was never dead/tinified/neec.nonso--1.webp"
+                                alt=" Temple Image" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/what was dead was never dead/tinified/neec.nonso--2.webp"
+                                alt=" Temple Image" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/what was dead was never dead/tinified/neec.nonso--3.webp"
+                                alt=" Temple Image" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/what was dead was never dead/tinified/neec.nonso--4.webp"
+                                alt=" Temple Image" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/what was dead was never dead/tinified/neec.nonso--5.webp"
+                                alt=" Temple Image" loading=""></li>
+                        <li class="carousel-slide"><img class="carousel-image"
+                                src="../images/what was dead was never dead/tinified/neec.nonso--6.webp"
+                                alt=" Temple Image" loading=""></li>
+
+                    </ul>
+
+                </div>
+
+                <button class="carousel-button carousel--button-right">
+                    <img src="../images/arrow-forward-circle.svg" alt="">
+                </button>
+
+                <div class="carousel-nav">
+                    <button class="carousel-indicator current-slide"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                    <button class="carousel-indicator"></button>
+                </div>
+
             </div>
 
         </div>
 
-    </div>
+        <div class="mobile">
 
-    <div class="mobile">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp" alt="">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp" alt="">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/3.webp" alt="">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/4.webp" alt="">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/5.webp" alt="">
+            <img class="carousel-image" src="../images/what was dead was never dead/Mobile/6.webp" alt="">
 
-        <img class="carousel-image" src="../images/what was dead was never dead/Mobile/1.webp" alt="">
-        <img class="carousel-image" src="../images/what was dead was never dead/Mobile/2.webp" alt="">
-        <img class="carousel-image" src="../images/what was dead was never dead/Mobile/3.webp" alt="">
-        <img class="carousel-image" src="../images/what was dead was never dead/Mobile/4.webp" alt="">
-        <img class="carousel-image" src="../images/what was dead was never dead/Mobile/5.webp" alt="">
-        <img class="carousel-image" src="../images/what was dead was never dead/Mobile/6.webp" alt="">
+        </div>
 
-    </div>
+    </main>
 
     <!-- End of Main -->
 
@@ -241,67 +250,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
 
-        gsap.from(".thelastburial-paragraph", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.8,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        gsap.from(".extra", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.9,
-            duration: 1
-        });
-
-        gsap.from(".footer-container", {
-            scrollTrigger: {
-                trigger: ".carousel",
-                start: 700, // when the top of the trigger hits the top of the viewport
-                end: "+=500", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.5,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-
-
-                //   markers: true,
-
-            }
-        });
-        tl.from(".boy-fraternity-title", { x: -200, opacity: 0, duration: 1 })
-        tl.from(".thelastburial-paragraph", { x: 200, opacity: 0, duration: 1.5 })
-        tl.from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-        tl.from(".carousel", { y: 200, opacity: 0, duration: 1.5 })
-            .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-            .from(".designer", { y: 10, opacity: 0, duration: 1.5 });
-
-
-    </script>
 
     <script src="../projects.js" async defer></script>
     <script src="../script.js" async defer></script>
