--- a/exhibitions/boundariesofreason.html
+++ b/exhibitions/boundariesofreason.html
@@ -116,32 +116,32 @@
 
     <!-- End of Navbar-->
 
-    <main class="exhibition-main-container">
-
-        <div class="items-container">
-
-            <section class="exhibition-intro">
-
-                <p class="exhibition-title"><a href="./exhibitions/boundariesofreason">boundaries of reason,</a></p>
-                <p class="exhibition-venue">abuja photo festival,</p>
-                <p class="exhibition-location">abuja,nigeria</p>
-
-            </section>
-
-            <section>
-                <img class="sliders" name="slider" />
-            </section>
 
 
-            <section class="child-images-more">
-                <img src="../exhibition/boundaries of reason/2.webp" alt=" boundaries of reason">
-                <img src="../exhibition/boundaries of reason/3.webp" alt=" boundaries of reason">
-                <img src="../exhibition/boundaries of reason/4.webp" alt=" boundaries of reason">
-            </section>
+    <div class="items-container">
 
-        </div>
+        <section class="exhibition-intro">
 
-    </main>
+            <p class="exhibition-title"><a href="./boundariesofreason">boundaries of reason,</a></p>
+            <p class="exhibition-venue">abuja photo festival,</p>
+            <p class="exhibition-location">abuja,nigeria</p>
+
+        </section>
+
+        <section>
+            <img class="boundariesofreason" name="slide" />
+        </section>
+
+
+        <section class="child-images-more">
+            <img src="../exhibition/boundaries of reason/2.webp" alt=" boundaries of reason">
+            <img src="../exhibition/boundaries of reason/3.webp" alt=" boundaries of reason">
+            <img src="../exhibition/boundaries of reason/4.webp" alt=" boundaries of reason">
+        </section>
+
+    </div>
+
+
 
     <!-- Start of Footer -->
 
@@ -164,10 +164,39 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script>
+        var i = 0; // Start Point
+        var time = 3000; // Time Between Switch
 
+
+    function checkLength(array) {
+        // Check If Index Is Under Max
+        if (i < array.length - 1) {
+            // Add 1 to Index
+            i++;
+        } else {
+            // Reset Back To O
+            i = 0;
+        }
+    }
+
+        var images3 = [
+            "../exhibition/boundaries of reason/1.webp",
+            "../exhibition/boundaries of reason/5.webp",
+        ];
+
+        function changeImg3() {
+            document.slide.src = images3[i];
+            checkLength(images3);
+            setTimeout("changeImg3()", time);
+        }
+
+        window.onload = changeImg3;
+    </script>
 
     <script src="../script.js" async defer></script>
-    <script src="../gsap.js"></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
 
 </body>
 
