--- a/exhibitions/taste-mystique.html
+++ b/exhibitions/taste-mystique.html
@@ -40,7 +40,6 @@
     -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/mobile.css">
-    <link rel="stylesheet" href="../css/try.css">
 
 
 </head>
@@ -120,34 +119,40 @@
 
         <section class="exhibition-intro">
 
-            <p class="exhibition-title"><a href="./exhibitions/taste-mystique"> taste:mystique <br> smithsonian
+            <p class="exhibition-title"><a href="./taste-mystique"> taste:mystique <br> smithsonian
                 </a>
             </p>
             <p class="exhibition-venue">lagos photo festival,</p>
             <p class="exhibition-location">lagos,nigeria</p>
         </section>
 
-        <section class="taste-mystique-folder">
-            <img src="../exhibition/taste mystique/1.webp" class="slider-image" name="slides" />
-            <img src="../exhibition/taste mystique/2.webp" class="slider-image"  alt="">
+        <section>
+            <img class="slider-image" name="slide" />
         </section>
 
-        <section class="potrait-images-exhibition">
-            <img src="../exhibition/taste mystique/3.webp"  alt="taste-mystique">
-            <img src="../exhibition/taste mystique/4.webp"  alt="taste-mystique">
-            <img src="../exhibition/taste mystique/5.webp"  alt="taste-mystique">
-          
+        <!--
 
+        <section class="taste-mystique-folder">
+            <img src="../exhibition/taste mystique/1.webp" class="slider-image" name="slides" />
+            <img src="../exhibition/taste mystique/2.webp" class="slider-image" alt="">
+        </section>
+
+        -->
+
+        <section class="potrait-images-exhibition">
+            <img src="../exhibition/taste mystique/3.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/4.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/5.webp" alt="taste-mystique">
         </section>
 
         <section class="child-images">
-            <img src="../exhibition/taste mystique/6.webp"   alt="taste-mystique">
-            <img src="../exhibition/taste mystique/7.webp"   alt="taste-mystique">
-            <img src="../exhibition/taste mystique/8.webp"   alt="taste-mystique">
-            <img src="../exhibition/taste mystique/9.webp"   alt="taste-mystique">
-            <img src="../exhibition/taste mystique/10.webp"  alt="taste-mystique">
-            <img src="../exhibition/taste mystique/11.webp"  alt="taste-mystique">
-         
+
+            <img src="../exhibition/taste mystique/6.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/7.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/8.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/9.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/10.webp" alt="taste-mystique">
+            <img src="../exhibition/taste mystique/11.webp" alt="taste-mystique">
 
         </section>
 
@@ -176,8 +181,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
+    <script>
+        var i = 0; // Start Point
+        var time = 3000; // Time Between Switch
+
+        var images2 = [
+            "../exhibition/taste mystique/1.webp",
+            "../exhibition/taste mystique/2.webp",
+        ];
+
+        function checkLength(array) {
+            // Check If Index Is Under Max
+            if (i < array.length - 1) {
+                // Add 1 to Index
+                i++;
+            } else {
+                // Reset Back To O
+                i = 0;
+            }
+        }
+        function changeImg2() {
+            document.slide.src = images2[i];
+            checkLength(images2);
+            setTimeout("changeImg2()", time);
+        }
+        window.onload = changeImg2;
+    </script>
+
 
     <script src="../script.js" async defer></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
+
 
 </body>
 
