--- a/exhibitions/wanawari.html
+++ b/exhibitions/wanawari.html
@@ -118,27 +118,23 @@
 
     <!-- Exhibitions -->
 
-    <main class="exhibition-main-container">
+    <div class="items-container wana">
 
-        <div class="items-container">
+        <section class="exhibition-intro">
 
-            <section class="exhibition-intro">
+            <p class="exhibition-title"><a href="wanawari"> wa na wari </a>
+            </p>
+            <p class="exhibition-venue">wa na wari art space,</p>
+            <p class="exhibition-location">seatle,usa</p>
+        </section>
 
-                <p class="exhibition-title"><a href="wanawari"> wa na wari </a>
-                </p>
-                <p class="exhibition-venue">wa na wari art space,</p>
-                <p class="exhibition-location">seatle,usa</p>
-            </section>
+        <section class="child-images">
 
-            <section class="wana-wari-image-container">
+            <img src="../exhibition/wa na wari - wa na wari art space seatle,usa/271859102_10224980653095621_3753920555993396334_n.jpg"
+                alt="">
+        </section>
 
-                <img src="../exhibition/wa na wari - wa na wari art space seatle,usa/271859102_10224980653095621_3753920555993396334_n.jpg"
-                    alt="">
-            </section>
-
-        </div>
-
-    </main>
+    </div>
 
     <!-- End of Exhibition-->
 
@@ -162,13 +158,11 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
-      
-
-    </script>
+ 
 
     <script src="../script.js" async defer></script>
-    <script src="../gsap.js"></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
 
 </body>
 
