--- a/exhibitions/youngcontemporaries.html
+++ b/exhibitions/youngcontemporaries.html
@@ -119,40 +119,40 @@
     <!-- End of Navbar-->
 
     <!-- Exhibitions -->
-  
 
-        <div class="items-container">
 
-            <section class="exhibition-intro">
+    <div class="items-container">
 
-                <p class="exhibition-title">
-                    <a href="./exhibitions/youngcontemporaries">
-                        young contemporaries.
-                    </a>
-                </p>
-                <p class="exhibition-venue">rele arts foundation </p>
-                <p class="exhibition-location">lagos,nigeria</p>
-            </section>
+        <section class="exhibition-intro">
 
-            <section>
-                <img class="slider-image" name="slide" />
-            </section>
+            <p class="exhibition-title">
+                <a href="./youngcontemporaries">
+                    young contemporaries.
+                </a>
+            </p>
+            <p class="exhibition-venue">rele arts foundation </p>
+            <p class="exhibition-location">lagos,nigeria</p>
+        </section>
 
-            <section class="child-images">
-                
-                <img src="../exhibition/young contemporaries/2.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/3.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/4.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/5.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/6.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/7.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/8.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/9.webp" alt="young contemporaries">
-                <img src="../exhibition/young contemporaries/10.webp" alt="young contemporaries">
+        <section>
+            <img class="slider-image" name="slide" />
+        </section>
 
-            </section>
+        <section class="child-images">
 
-        </div>
+            <img src="../exhibition/young contemporaries/2.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/3.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/4.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/5.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/6.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/7.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/8.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/9.webp" alt="young contemporaries">
+            <img src="../exhibition/young contemporaries/10.webp" alt="young contemporaries">
+
+        </section>
+
+    </div>
 
 
 
@@ -178,10 +178,41 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script>
+        var i = 0; // Start Point
+        var time = 3000; // Time Between Switch
+        var images = [
+            "../exhibition/young contemporaries/1.webp",
+            "../exhibition/young contemporaries/11.webp",
+        ];
 
+        function checkLength(array) {
+            // Check If Index Is Under Max
+            if (i < array.length - 1) {
+                // Add 1 to Index
+                i++;
+            } else {
+                // Reset Back To O
+                i = 0;
+            }
+        }
+
+
+
+        // Change Image
+        function changeImg() {
+            document.slide.src = images[i];
+            checkLength(images);
+            setTimeout("changeImg()", time);
+        }
+
+        window.onload = changeImg;
+    </script>
 
     <script src="../script.js" async defer></script>
-    <script src="../gsap.js"></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
+
 
 </body>
 
