--- a/projects/christmasandclothes.html
+++ b/projects/christmasandclothes.html
@@ -117,6 +117,8 @@
 
     <!-- Main -->
 
+    <main> 
+
     <div class="boy-fraternity-div">
         <h1 class="boy-fraternity-title">christmas and clothes.</h1>
 
@@ -234,6 +236,8 @@
 
     </div>
 
+    </main>
+
     <!-- End of Main -->
     <!-- Start of Footer -->
 
@@ -258,78 +262,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
-
-        gsap.from(".extra", {
-            scrollTrigger: {
-                trigger: ".thelastburial-paragraph",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.8,
-            duration: 1
-        });
-
-        gsap.from(".footer-container", {
-            scrollTrigger: {
-                trigger: ".carousel",
-                start: 500, // when the top of the trigger hits the top of the viewport
-                end: "+=500", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.5,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        gsap.from(".boy-fraternity-div", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.9,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        gsap.from(".thelastburial-paragraph", {
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                start: -50, // when the top of the trigger hits the top of the viewport
-                end: "+=300", // end after scrolling 100px beyond the start
-                // markers: true
-                scrub: 1
-            },
-            stagger: { amount: 0.5 },
-            scale: 0.99,
-            duration: 1,
-            ease: "power1.inOut"
-        });
-
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: ".boy-fraternity-div",
-                //   markers: true,
-            }
-        });
-        tl.from(".boy-fraternity-title", { x: -200, opacity: 0, duration: 1 })
-            .from(".thelastburial-paragraph", { x: 200, opacity: 0, duration: 1.5 })
-            .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-            .from(".carousel", { y: 200, opacity: 0, duration: 1.5 })
-            .from(".copyright", { y: 10, opacity: 0, duration: 1.5 })
-
-
-
-    </script>
+   
 
     <script src="../script.js" async defer></script>
     <script src="../projects.js" async defer></script>
