--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
     <main class="index-main">
         <div class="landing-page mobile">
             <a href="projects">
-                <img class="mobile-homepage" src="images/the boys fraternity/8.webp" alt="homepage-image-mobile">
+                <img class="mobile-homepage" src="images/homepage-mobile.webp" alt="homepage-image-mobile">
             </a>
         </div>
 
         <div class="landing-page">
-            <img src="images/homepage.webp" alt="homepage-image">
+            <img  src="images/homepage.webp" alt="homepage-image">
         </div>
 
     </main>
